--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Document</title>
     </head>
     <body>
-        <div class="flip-card">
+        <!-- <div class="flip-card">
             <div class="inner">
                 <div class="front">
                     INNNEN
@@ -17,40 +17,67 @@
                     BACK
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <div class="mobileTest" id="box"></div>
 
         <div class="wrapper">
             <div class="cardwrapper" id="cardWrapper">
                 <div
-                    id="draggable"
                     class="cards"
                     draggable="true"
                     ondragstart="onDragStart(event)"
                     ondragover="onDragOver(event)"
-                ></div>
+                >
+                    <div class="inner">
+                        <div class="front"></div>
+                        <div class="back"></div>
+                    </div>
+                </div>
                 <div
-                    id="draggable2"
                     class="cards"
                     draggable="true"
                     ondragstart="onDragStart(event)"
                     ondragover="onDragOver(event)"
-                ></div>
+                >
+                    <div class="inner">
+                        <div class="front"></div>
+                        <div class="back"></div>
+                    </div>
+                </div>
                 <div
-                    id="draggable3"
                     class="cards"
                     draggable="true"
                     ondragstart="onDragStart(event)"
                     ondragover="onDragOver(event)"
-                ></div>
+                >
+                    <div class="inner">
+                        <div class="front"></div>
+                        <div class="back"></div>
+                    </div>
+                </div>
                 <div
-                    id="draggable4"
                     class="cards"
                     draggable="true"
                     ondragstart="onDragStart(event)"
                     ondragover="onDragOver(event)"
-                ></div>
+                >
+                    <div class="inner">
+                        <div class="front"></div>
+                        <div class="back"></div>
+                    </div>
+                </div>
+                <div
+                    class="cards"
+                    draggable="true"
+                    ondragstart="onDragStart(event)"
+                    ondragover="onDragOver(event)"
+                >
+                    <div class="inner">
+                        <div class="front"></div>
+                        <div class="back"></div>
+                    </div>
+                </div>
             </div>
             <div class="dropWrapper">
                 <div class="zoneWrapper">
