--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
         </div> -->
 
-        <!-- <div class="mobileTest" id="box"></div> -->
+        <div class="mobileTest" id="box"></div>
 
         <div class="wrapper">
             <div class="cardwrapper" id="cardWrapper">
@@ -888,6 +888,7 @@
             </div>
             <div class="dropWrapper">
                 <div class="zoneWrapper">
+                    <div class="txtAussen">Vergangenheit</div>
                     <div
                         class="dropzone"
                         id="dropzone"
@@ -899,12 +900,15 @@
                             >Vergangenheit</span
                         >
                     </div>
-                    <h2 class="thema"></h2>
-                    <div class="head"></div>
-                    <div class="text"></div>
-                    <div id="kopfPast"></div>
+                    <div class="words">
+                        <h2 class="thema"></h2>
+                        <div class="head"></div>
+                        <div class="text"></div>
+                        <div id="kopfPast"></div>
+                    </div>
                 </div>
                 <div class="zoneWrapper">
+                    <div class="txtAussen">Gegenwart</div>
                     <div
                         class="dropzone"
                         id="dropzone2"
@@ -914,13 +918,15 @@
                     >
                         <span class="txtInnen" id="gegenwart">Gegenwart</span>
                     </div>
-                    <h2 class="thema2"></h2>
-                    <div class="head"></div>
-
-                    <div class="text2"></div>
-                    <div id="kopfPresent"></div>
+                    <div class="words">
+                        <h2 class="thema2"></h2>
+                        <div class="head"></div>
+                        <div class="text2"></div>
+                        <div id="kopfPresent"></div>
+                    </div>
                 </div>
                 <div class="zoneWrapper">
+                    <div class="txtAussen">Zukunft</div>
                     <div
                         class="dropzone"
                         id="dropzone3"
@@ -930,11 +936,12 @@
                     >
                         <span class="txtInnen" id="zukunft">Zukunft</span>
                     </div>
-                    <h2 class="thema3"></h2>
-                    <div class="head"></div>
-
-                    <div class="text3"></div>
-                    <div id="kopfFuture"></div>
+                    <div class="words">
+                        <h2 class="thema3"></h2>
+                        <div class="head"></div>
+                        <div class="text3"></div>
+                        <div id="kopfFuture"></div>
+                    </div>
                 </div>
             </div>
         </div>
