--- a/index.html
+++ b/index.html
@@ -886,6 +886,7 @@
                     </div>
                 </div>
             </div>
+            <button id="shuffleBtn">Shuffle me!</button>
             <div class="dropWrapper">
                 <div class="zoneWrapper">
                     <div class="txtAussen">Vergangenheit</div>
