--- a/index.html
+++ b/index.html
@@ -926,7 +926,7 @@
                         <div class="head"></div>
                         <div class="text"></div>
                         <div id="kopfPast"></div>
-                        <div class="nextBtn">Nächtste Karte</div>
+                        <div class="nextBtn">Nächste Karte</div>
                     </div>
                 </div>
                 <div class="zoneWrapper">
@@ -948,7 +948,7 @@
                         <div class="head"></div>
                         <div class="text2"></div>
                         <div id="kopfPresent"></div>
-                        <div class="nextBtn">Nächtste Karte</div>
+                        <div class="nextBtn">Nächste Karte</div>
                     </div>
                 </div>
                 <div class="zoneWrapper">
